--- a/src/main/resources/org/littletonrobotics/networkalerts/AlertsWidget.fxml
+++ b/src/main/resources/org/littletonrobotics/networkalerts/AlertsWidget.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.*?>
@@ -10,5 +11,5 @@
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.littletonrobotics.networkalerts.AlertsWidget"
       fx:id="root">
-      <ListView fx:id="list"/>
+      <Canvas fx:id="canvas"/>
 </VBox>
