--- a/src/main/resources/org/littletonrobotics/networkalerts/AlertsWidget.fxml
+++ b/src/main/resources/org/littletonrobotics/networkalerts/AlertsWidget.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns="http://javafx.com/javafx"
+<Pane xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.littletonrobotics.networkalerts.AlertsWidget"
       fx:id="root">
       <Canvas fx:id="canvas"/>
-</VBox>
+</Pane>
